# esp32_c3_whitelist_detector

./: .gemini-context.md  .gitignore  CMakeLists.txt  README.md  build_flash_monitor.cmd  error.txt  wifi_provisioning_plan.md
components/website_detector/: CMakeLists.txt  Kconfig
components/website_detector/include/: Pinger.hpp  website_detector.hpp
components/website_detector/src/: Pinger.cpp  website_detector.cpp
components/wifi_controller/: CMakeLists.txt  Kconfig
components/wifi_controller/include/: wifi_controller.hpp
components/wifi_controller/src/: wifi_controller.cpp
main/: idf_component.yml  main.cpp
